--- a/css/style.green.css
+++ b/css/style.green.css
@@ -186,6 +186,7 @@ nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover {
 
 .intro-section .logo, .intro-section p {
   margin-bottom: 40px;
+  margin-top: 60px;
 }
 
 @media (min-width: 992px) {
